[gd_scene load_steps=34 format=2]

[ext_resource path="res://shaders/chromaticAbberation.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/graphics/donthangup.png" type="Texture" id=2]
[ext_resource path="res://scenes/menu/menuOption.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=4]
[ext_resource path="res://assets/graphics/ui/btn4-hover.png" type="Texture" id=5]
[ext_resource path="res://scenes/menu/danglingPhone.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/tres/mousetrap.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/graphics/ui/btn5-hover.png" type="Texture" id=8]
[ext_resource path="res://scenes/CRT.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/fonts/tres/pixelplay.tres" type="DynamicFont" id=10]
[ext_resource path="res://assets/graphics/ui/btn5.png" type="Texture" id=11]
[ext_resource path="res://scenes/backBtn.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/graphics/ui/btn4.png" type="Texture" id=13]
[ext_resource path="res://assets/graphics/notepad/notepad-base.png" type="Texture" id=14]
[ext_resource path="res://assets/fonts/tres/Notepen-Large.tres" type="DynamicFont" id=15]
[ext_resource path="res://assets/fonts/tres/Notepen.tres" type="DynamicFont" id=16]
[ext_resource path="res://scenes/menu/options.gd" type="Script" id=17]
[ext_resource path="res://assets/graphics/ui/vol-grabber.png" type="Texture" id=19]
[ext_resource path="res://assets/graphics/ui/ig.png" type="Texture" id=20]
[ext_resource path="res://assets/graphics/ui/vol-slider.png" type="Texture" id=21]
[ext_resource path="res://assets/graphics/ui/checkbox.png" type="Texture" id=22]
[ext_resource path="res://assets/graphics/ui/checkbox-ticked.png" type="Texture" id=23]
[ext_resource path="res://assets/graphics/ui/twt.png" type="Texture" id=26]
[ext_resource path="res://assets/graphics/ui/kofi.png" type="Texture" id=27]
[ext_resource path="res://assets/graphics/ui/ig-hover.png" type="Texture" id=28]
[ext_resource path="res://assets/graphics/ui/twt-hover.png" type="Texture" id=29]
[ext_resource path="res://assets/graphics/ui/kofi-hover.png" type="Texture" id=30]
[ext_resource path="res://scenes/menu/credits.gd" type="Script" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 225, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 114 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 202, 10 )
margin_left = 0.921517
margin_right = 1.04895
margin_top = 1.14439
margin_bottom = 1.0876

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.701961, 0.733333, 0.643137, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )
border_blend = true
corner_radius_top_left = 1
corner_radius_bottom_left = 1
corner_detail = 1

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="menu" type="Control"]
modulate = Color( 1, 1, 1, 0.666667 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -376, 289 )
color = Color( 0.0196078, 0.027451, 0.0313726, 0.352941 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="main"]
margin_left = 134.0
margin_top = 204.0
margin_right = 317.0
margin_bottom = 355.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="cableStart" type="Position2D" parent="main/Title"]
position = Vector2( 177, 6 )

[node name="danglingPhone" parent="main" instance=ExtResource( 6 )]
position = Vector2( 310, 210 )

[node name="Area2D" type="StaticBody2D" parent="main"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/Area2D"]
position = Vector2( 225, 384 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="main/Area2D"]
position = Vector2( 225, 176 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="main/Area2D"]
position = Vector2( 10, 280 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="main/Area2D"]
position = Vector2( 439, 280 )
shape = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = 47.0
margin_right = 92.0
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" parent="main/VBoxContainer" instance=ExtResource( 3 )]
modulate = Color( 1, 0.0784314, 0, 1 )
margin_bottom = 28.0
option_text = "ENTER"

[node name="phonebook" parent="main/VBoxContainer" instance=ExtResource( 3 )]
visible = false
modulate = Color( 0.937255, 1, 0.913725, 1 )
margin_top = 32.0
margin_bottom = 60.0
option_text = "PHONE BOOK"

[node name="options" parent="main/VBoxContainer" instance=ExtResource( 3 )]
modulate = Color( 0.937255, 1, 0.913725, 1 )
margin_top = 32.0
margin_bottom = 60.0
option_text = "OPTIONS"

[node name="credits" parent="main/VBoxContainer" instance=ExtResource( 3 )]
modulate = Color( 0.937255, 1, 0.913725, 1 )
margin_top = 64.0
margin_bottom = 92.0
option_text = "CREDITS"

[node name="leave" parent="main/VBoxContainer" instance=ExtResource( 3 )]
modulate = Color( 0.937255, 1, 0.913725, 1 )
margin_top = 96.0
margin_bottom = 124.0
option_text = "LEAVE"

[node name="footer" type="VBoxContainer" parent="main"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -83.0
margin_bottom = -35.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameby" type="Label" parent="main/footer"]
margin_right = 450.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.937255, 1, 0.913725, 1 )
text = "A GAME BY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="main/footer"]
margin_top = 24.0
margin_right = 450.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.0784314, 0, 1 )
text = "YI CHEN HOCK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chromaticAbberation" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="options" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notepad" type="TextureRect" parent="CanvasLayer/options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -243.0
margin_right = 191.0
margin_bottom = 243.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table" type="VBoxContainer" parent="CanvasLayer/options/notepad"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = 64.0
margin_right = -34.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_right = 303.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 43 )
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "options:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vol" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_top = 47.0
margin_right = 303.0
margin_bottom = 112.0
rect_min_size = Vector2( 90, 65 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_top = 116.0
margin_right = 303.0
margin_bottom = 166.0
rect_min_size = Vector2( 90, 50 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_top = 170.0
margin_right = 303.0
margin_bottom = 229.0
rect_min_size = Vector2( 90, 59 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "This game is designed to be played in windowed mode.
Press F4 to toggle fullscreen"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen2" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_top = 233.0
margin_right = 303.0
margin_bottom = 283.0
rect_min_size = Vector2( 90, 50 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "clear save data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note2" type="Label" parent="CanvasLayer/options/notepad/table"]
margin_top = 287.0
margin_right = 303.0
margin_bottom = 322.0
rect_min_size = Vector2( 90, 0 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "This action cannot be reversed. This takes you back
to the unplayed state of the game. "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volSlider" type="HSlider" parent="CanvasLayer/options/notepad"]
margin_left = 143.0
margin_top = 125.0
margin_right = 345.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_icons/grabber_highlight = ExtResource( 19 )
custom_icons/grabber = ExtResource( 19 )
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreenCheck" type="CheckBox" parent="CanvasLayer/options/notepad"]
margin_left = 301.0
margin_top = 185.0
margin_right = 325.0
margin_bottom = 209.0
custom_icons/checked = ExtResource( 23 )
custom_icons/unchecked = ExtResource( 22 )
shortcut_in_tooltip = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page" type="Label" parent="CanvasLayer/options/notepad"]
margin_left = 54.0
margin_top = 536.0
margin_right = 350.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.0588235, 0.0823529, 0.0901961, 1 )
text = "Page IIX"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clearData" type="TextureButton" parent="CanvasLayer/options/notepad"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 84.0
margin_top = -186.3
margin_right = 158.0
margin_bottom = -165.3
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear" type="Label" parent="CanvasLayer/options/notepad/clearData"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -5.44543
margin_right = 1.0
margin_bottom = -2.44543
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "DELETE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="CanvasLayer/options" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -75.0
margin_right = 39.0
margin_bottom = -46.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 5 )

[node name="credits" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notepad" type="TextureRect" parent="CanvasLayer/credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -243.0
margin_right = 191.0
margin_bottom = 243.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table" type="VBoxContainer" parent="CanvasLayer/credits/notepad"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 64.0
margin_right = -31.0
margin_bottom = -123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="CanvasLayer/credits/notepad/table"]
margin_right = 308.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 43 )
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "credits:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="CanvasLayer/credits/notepad/table"]
margin_top = 47.0
margin_right = 308.0
margin_bottom = 97.0
rect_min_size = Vector2( 90, 50 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "game by yi chen hock"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/credits/notepad/table"]
margin_top = 101.0
margin_right = 308.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 70 )
custom_constants/separation = 20
alignment = 1

[node name="ig" type="TextureButton" parent="CanvasLayer/credits/notepad/table/HBoxContainer"]
margin_left = 80.0
margin_right = 110.0
margin_bottom = 70.0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 28 )

[node name="twt" type="TextureButton" parent="CanvasLayer/credits/notepad/table/HBoxContainer"]
margin_left = 130.0
margin_right = 165.0
margin_bottom = 70.0
texture_normal = ExtResource( 26 )
texture_hover = ExtResource( 29 )

[node name="kofi" type="TextureButton" parent="CanvasLayer/credits/notepad/table/HBoxContainer"]
margin_left = 185.0
margin_right = 227.0
margin_bottom = 70.0
texture_normal = ExtResource( 27 )
texture_hover = ExtResource( 30 )

[node name="name2" type="Label" parent="CanvasLayer/credits/notepad/table"]
margin_top = 175.0
margin_right = 308.0
margin_bottom = 324.0
rect_min_size = Vector2( 148, 0 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0.384314, 0.388235, 0.384314, 1 )
text = "Music by William Hu and Yi Chen Hock

Special thanks: 
Max McGuinness
James Lecomte


Made with Godot Engine, Audacity & Aseprite."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="CanvasLayer/credits" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -39.0
margin_top = -75.0
margin_right = 39.0
margin_bottom = -46.0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 5 )

[node name="CRT" parent="." instance=ExtResource( 9 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="main/VBoxContainer/enter" to="." method="_on_enter_pressed"]
[connection signal="pressed" from="main/VBoxContainer/phonebook" to="." method="_on_phonebook_pressed"]
[connection signal="pressed" from="main/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="main/VBoxContainer/leave" to="." method="_on_leave_pressed"]
[connection signal="value_changed" from="CanvasLayer/options/notepad/volSlider" to="CanvasLayer/options" method="_on_volSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/options/notepad/fullscreenCheck" to="CanvasLayer/options" method="_on_fullscreenCheck_pressed"]
[connection signal="pressed" from="CanvasLayer/options/notepad/clearData" to="CanvasLayer/options" method="_on_clearData_pressed"]
[connection signal="pressed" from="CanvasLayer/options/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/credits/notepad/table/HBoxContainer/ig" to="CanvasLayer/credits" method="_on_ig_pressed"]
[connection signal="pressed" from="CanvasLayer/credits/notepad/table/HBoxContainer/twt" to="CanvasLayer/credits" method="_on_twt_pressed"]
[connection signal="pressed" from="CanvasLayer/credits/notepad/table/HBoxContainer/kofi" to="CanvasLayer/credits" method="_on_kofi_pressed"]
[connection signal="pressed" from="CanvasLayer/credits/back" to="CanvasLayer/credits" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/credits/back" to="." method="_on_back_pressed"]
